cmake_minimum_required(VERSION 3.15)
project(printf C)

set(CMAKE_C_STANDARD 11)

include_directories(.)
include_directories(libft)

add_executable(printf
        libft/ft_atoi.c
        libft/ft_atoi_base.c
        libft/ft_bzero.c
        libft/ft_clear_table.c
        libft/ft_countwords.c
        libft/ft_free.c
        libft/ft_is_minus_inf.c
        libft/ft_isalnum.c
        libft/ft_isalpha.c
        libft/ft_isascii.c
        libft/ft_isdigit.c
        libft/ft_isinf.c
        libft/ft_isnan.c
        libft/ft_isprint.c
        libft/ft_iterative_factorial.c
        libft/ft_iterative_power.c
        libft/ft_itoa.c
        libft/ft_lltoa.c
        libft/ft_llutoa.c
        libft/ft_lstadd.c
        libft/ft_lstdel.c
        libft/ft_lstdelone.c
        libft/ft_lstiter.c
        libft/ft_lstmap.c
        libft/ft_lstnew.c
        libft/ft_memalloc.c
        libft/ft_memccpy.c
        libft/ft_memchr.c
        libft/ft_memcmp.c
        libft/ft_memcpy.c
        libft/ft_memdel.c
        libft/ft_memmove.c
        libft/ft_memset.c
        libft/ft_putchar.c
        libft/ft_putchar_fd.c
        libft/ft_putendl.c
        libft/ft_putendl_fd.c
        libft/ft_putnbr.c
        libft/ft_putnbr_fd.c
        libft/ft_putnbr_max.c
        libft/ft_putstr.c
        libft/ft_putstr_fd.c
        libft/ft_sqrt.c
        libft/ft_strcat.c
        libft/ft_strchr.c
        libft/ft_strclr.c
        libft/ft_strcmp.c
        libft/ft_strcpy.c
        libft/ft_strdel.c
        libft/ft_strdup.c
        libft/ft_strequ.c
        libft/ft_striter.c
        libft/ft_striteri.c
        libft/ft_strjoin.c
        libft/ft_strjoin_free.c
        libft/ft_strlcat.c
        libft/ft_strlen.c
        libft/ft_strmap.c
        libft/ft_strmapi.c
        libft/ft_strncat.c
        libft/ft_strncmp.c
        libft/ft_strncpy.c
        libft/ft_strnequ.c
        libft/ft_strnew.c
        libft/ft_strnstr.c
        libft/ft_strrchr.c
        libft/ft_strsplit.c
        libft/ft_strstr.c
        libft/ft_strsub.c
        libft/ft_strtrim.c
        libft/ft_tolower.c
        libft/ft_toupper.c
        libft/ft_ulltoa.c
        libft/get_next_line.c
        libft/itoa_base.c
        libft/libft.h
        libft/number_len.c
        libft/number_len_ll.c
        libft/number_len_ull.c
        libft/to_uppercase.c
        libft/ulltoa_base.c
        check.c
        delete_fill_final_str.c
        find.c
        find_str_size.c
#     ft_printf.c
        ft_printf.h
        main.c
#        NEW_display_f.c
        floats.c
        new_str.c
        parse_char.c
        parse_format.c
        pf_format.c
        pf_strcpy.c
        SVETA_pf_itoa.c


        ft_printf.c
        fill_final.c
        pf_free.c
        print_check.c
        )
